<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FreeXperia KeyboardChanger by Bin4ry</string>
    <string name="header">Please choose your HW-Keyboard Layout:</string>
    <string name="qwertz">qwertz</string>
    <string name="radio_button_1">qwertz</string>
    <string name="radio_button_2">qwerty-en</string>
    <string name="radio_button_3">azerty</string>
    <string name="radio_button_4">qwerty-br</string>
    <string name="radio_button_5">qwerty-no-dk</string>
    <string name="radio_button_6">qwerty-se-fi</string>
    <string name="radio_button_7">latin-on-arabic</string>
    <string name="radio_button_8">latin-on-arabic-azerty</string>
    <string name="radio_button_9">latin-on-bopomofo</string>
    <string name="radio_button_10">latin-on-cyrillic</string>
    <string name="radio_button_11">latin-on-greek</string>
    <string name="radio_button_12">latin-on-hebrew</string>
    <string name="radio_button_13">latin-on-korean</string>
    <string name="radio_button_14">latin-on-pinyin</string>
    <string name="radio_button_15">latin-on-thai</string>
    <string name="button">Save and Reboot</string>
    <string name="current">Current Keyboard: </string>
</resources>
