<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    <TextView android:layout_height="wrap_content" 
        android:text="@string/header"
        android:layout_width="wrap_content" 
        android:textSize="15sp"
        android:paddingBottom="10dip">
    </TextView>
    <TextView android:text="@string/current"></TextView>
    <TextView android:text="@string/qwertz" android:id="@+id/TVcurrent"></TextView>
    <RadioButton android:text="@string/radio_button_1" android:id="@+id/rbqwertz"/>
    <RadioButton android:text="@string/radio_button_2" android:id="@+id/rbqwertyen" />
    <RadioButton android:text="@string/radio_button_3" android:id="@+id/rbazerty" />
    <RadioButton android:text="@string/radio_button_4" android:id="@+id/rbqwertybr" />
    <RadioButton android:text="@string/radio_button_5" android:id="@+id/rbqwertynodk" />
    <RadioButton android:text="@string/radio_button_6" android:id="@+id/rbqwertysefi" />
    <RadioButton android:text="@string/radio_button_7" android:id="@+id/rblatinonarabic" />
    <RadioButton android:text="@string/radio_button_8" android:id="@+id/rblatinonarabicazerty" />
    <RadioButton android:text="@string/radio_button_9" android:id="@+id/rblatinonbopomofo" />
    <RadioButton android:text="@string/radio_button_10" android:id="@+id/rblatinoncyrillic" />
    <RadioButton android:text="@string/radio_button_11" android:id="@+id/rblatinongreek" />
    <RadioButton android:text="@string/radio_button_12" android:id="@+id/rblatinonhebrew" />
    <RadioButton android:text="@string/radio_button_13" android:id="@+id/rblatinonkorean" />
    <RadioButton android:text="@string/radio_button_14" android:id="@+id/rblatinonpinyin" />
    <RadioButton android:text="@string/radio_button_15" android:id="@+id/rblatinonthai" />
    <Button android:layout_height="wrap_content" android:id="@+id/button1" android:text="@string/button" android:layout_width="101dp"></Button>
</RadioGroup>
</ScrollView>